--- a/login.html
+++ b/login.html
@@ -6,14 +6,14 @@
     <title>log in</title>
 </head>
 <body>
-    <div class="hero">
+    <div class="modal-login">
       <div class="title">
         <h1 class="big-title">Log In</h1>
         <p class="perhas">Not a member？ <a href="./register.html">Sign up now</a></p>
       </div>
       <form  id="loginUser-form">
-        <input id="email-login" type="email" />
-        <input id="password-login" type="password" />
+        <label>Email:<input id="email-login" type="email" /></label>
+        <label>Password:<input id="password-login" type="password" /></label>
       </form>
       <button class="login-button">Sign up now</button>
 </body>
