--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <label>Image: <input id="image" type="url" /></label>
           <div class="registerButtonWrapper">
             <button class="addProduct">Add product</button>
-            <button id="cancel">Cancel</button>
+            <button id="cancel" type="reset">Cancel</button>
           </div>
         </form>
       </div>
