--- a/register.html
+++ b/register.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Your album</title>
   </head>
   <body>
@@ -35,6 +36,6 @@
         <button class="register-button">Sign up now</button>
       </div>
     </div>
+    <script src="./js/main.js"></script>
   </body>
-  <script src="./js/main.js"></script>
 </html>
